--- a/lectures/reports/l1-l2-mean-variance/report.tex
+++ b/lectures/reports/l1-l2-mean-variance/report.tex
@@ -141,8 +141,10 @@ $$
 $$
 
 The fraction ${\rho}$ represents the systematic risk of the portfolio, which is the risk that cannot be diversified away by adding more assets. In reality, correlations and variances differ, but the intuition remains:
-- Idiosyncratic risk can be eliminated through diversification, and is the diversifiable part of ${\sigma}_{p}^2$.
-- Systematic risk cannot be eliminated through diversification.
+\begin{itemize}
+    \item Idiosyncratic risk can be eliminated through diversification, and is the diversifiable part of ${\sigma}_{p}^2$.
+    \item Systematic risk cannot be eliminated through diversification.
+\end{itemize}
 
 \subsection{In the Optimal Portfolio Securities are Penalized by their Marginal Risk}
 In the optimal portfolio, the marginal risk is the covariance with other assets in my portfolio. It is the important part of the risk. The volatility by itself is not the most important.
@@ -151,7 +153,7 @@ In the optimal portfolio, the marginal risk is the covariance with other assets 
 The correlation required to construct a riskless portfolio approaches ${\rho}=0$ as the number of assets grows infinitely. In practice, with a large number of assets, a nearly riskless portfolio can be achieved if ${\rho}=0$.
 
 \section{Mean-Variance Optimization}
-In mean-variance optimization, we aim to reduce risk while maintaining high returns. Thus, the optimization involves two variables.
+In mean-variance optimization, we aim to reduce risk while maintaining high returns. In this context, we use variance (or volatility) as a proxy for risk. Thus, the optimization involves two variables.
 
 When combining "n" assets, we can create a mean-variance frontier, represented as a "parabola."
 A linear combination of points on the mean-variance graph can reach any point on this parabola.
@@ -239,9 +241,11 @@ Therefore, if an investor wants to achieve a higher expected return than the tan
 
 \subsection{The Formula for the Tangency Portfolio}
 The tangency portfolio allocates more weight to assets that:
-1. Have higher mean returns.
-2. Have lower volatility (variance).
-3. Have lower covariance with other assets.
+\begin{enumerate}
+    \item Have higher mean returns.
+    \item Have lower volatility (variance).
+    \item Have lower covariance with other assets.
+\end{enumerate}
 
 Points (1) and (2) relate directly to Sharpe ratios: intuitively, the higher an asset's Sharpe ratio, the more you should hold of that asset.
 
@@ -263,7 +267,7 @@ In this context, the minimum variance portfolio and all other portfolios become 
 
 Here, the portfolio weights no longer need to sum to one: if the sum of the tangency portfolio weights is less than 1, we assume the remaining capital is invested in the risk-free rate. If the sum exceeds 1, we assume the investor is shorting the risk-free rate.
 
-Considering the risk-free rate and the tangency portfolio, the relationship between variance and return becomes linear: a 50\% increase in portfolio variance, combining the tangency portfolio and the risk-free rate, results in a 50\% increase in excess returns.
+Considering the risk-free rate and the tangency portfolio, the relationship between variance and return becomes linear: an increase in any part of the line of volatility will always lead to the same increase in expected excess return.
 
 \subsection{Capital Market Line}
 The Capital Market Line (CML) represents the efficient portion of the mean-variance frontier, given the presence of a risk-free rate.
