--- a/homework-2/homework_2_solution_2023.ipynb
+++ b/homework-2/homework_2_solution_2023.ipynb
@@ -2187,7 +2187,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finm",
    "language": "python",
    "name": "python3"
   },
